fixed carousel control visibility

--- a/web/src/stylesheets/default/pages/page--goals.scss
+++ b/web/src/stylesheets/default/pages/page--goals.scss
@@ -497,6 +497,14 @@ h2.plan-name {
 		background-image: none;
 		text-shadow: none;
 
+		.carousel-control-next-icon {
+			background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%239699a6' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
+		}
+
+		.carousel-control-prev-icon {
+			background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%239699a6' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
+		}
+
 		.carousel-control-next-icon, .carousel-control-prev-icon {
 			color: $color-app-grey;
 			font-size: 4rem;
